--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+// 한글 깨짐 해결
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+}
