--- a/chess/.gitignore
+++ b/chess/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,intellij+all,gradle,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,intellij+all,gradle,java
+# Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,windows,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,windows,gradle
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -168,4 +168,4 @@ gradle-wrapper.jar
 # Java heap dump
 *.hprof
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,intellij+all,gradle,java!/.idea/workspace.xml
+# End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,windows,gradle
