--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
@@ -23,5 +24,4 @@ test {
     useJUnitPlatform()
 }
 tasks.withType(JavaCompile).configureEach {
-    options.encoding = "UTF-8"
-}
+    options.encoding = "UTF-8"}
