--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-# Created by https://www.toptal.com/developers/gitignore/api/intellij,gradle,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=intellij,gradle,java
+# Created by https://www.toptal.com/developers/gitignore/api/windows,intellij,java,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,intellij,java,gradle
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+.idea
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -140,6 +142,32 @@ fabric.properties
 hs_err_pid*
 replay_pid*
 
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
 ### Gradle ###
 .gradle
 **/build/
@@ -167,4 +195,4 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
-# End of https://www.toptal.com/developers/gitignore/api/intellij,gradle,java
+# End of https://www.toptal.com/developers/gitignore/api/windows,intellij,java,gradle
